<resources>
    <string name="app_name">Etch Your Sketch</string>

    <string name="shared_prefs_key">com.charlesdrews.etchyoursketch.SHARED_PREFS</string>

    <string name="dialog_negative_button">Cancel</string>

    <string name="options_dialog_title">Etching Options</string>
    <string name="options_dialog_positive_button_label">Done</string>

    <string name="color_menu_title">Color</string>
    <string name="color_dialog_title">Select a color</string>

    <string name="weight_menu_title">Weight</string>
    <string name="weight_dialog_title">Select an etch weight</string>

    <string name="erase_menu_title">Erase</string>
    <string name="erase_dialog_title">Eraser</string>
    <string name="erase_dialog_message">Touch where you\'d like to erase, or &lt;b>&lt;i>shake&lt;/i>&lt;/b> to clear the whole etching.</string>
    <string name="erase_dialog_pos_button">OK</string>
    <string name="erase_dialog_neutral_button">Don\'t show again</string>

    <string name="save_menu_title">Save</string>
    <string name="save_dialog_title">Save your etching</string>
    <string name="save_success_msg">Etching saved!</string>
    <string name="save_error_msg">There was a problem saving your etching.</string>

    <string name="share_menu_title">Share</string>
    <string name="share_dialog_title">Share your etching</string>
    <string name="share_fail_message">There was a problem sharing your etching.</string>
    <string name="share_chooser_title">Share your etching to…</string>
    <string name="share_text">Look at what I etched with Etch-Your-Sketch!</string>

    <string name="gallery_menu_title">Gallery</string>
    <string name="gallery_activity_title">Your Etchings</string>
    <string name="gallery_entry_description">Etching</string>
    <string name="gallery_selection_close_title">Close</string>
    <string name="gallery_empty_message">You don\'t have any saved etchings.</string>

    <string name="delete_option_title">Delete</string>
    <string name="delete_confirmation_title">Delete etching?</string>
    <string name="delete_pos_button">Yes</string>
    <string name="delete_neg_button">No</string>
</resources>
