<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="horizontal">

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="2"/>

    <ImageView
        android:id="@+id/menu_color"
        android:layout_width="@dimen/menu_icon_size"
        android:layout_height="@dimen/menu_icon_size"
        android:contentDescription="@string/color_menu_title"
        android:src="@drawable/palette"/>

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/menu_weight"
        android:layout_width="@dimen/menu_icon_size"
        android:layout_height="@dimen/menu_icon_size"
        android:contentDescription="@string/weight_menu_title"
        android:src="@drawable/line_weight"/>

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/menu_erase"
        android:layout_width="@dimen/menu_icon_size"
        android:layout_height="@dimen/menu_icon_size"
        android:contentDescription="@string/erase_menu_title"
        android:src="@drawable/eraser"/>

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/menu_save"
        android:layout_width="@dimen/menu_icon_size"
        android:layout_height="@dimen/menu_icon_size"
        android:contentDescription="@string/save_menu_title"
        android:src="@drawable/save"/>

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/menu_gallery"
        android:layout_width="@dimen/menu_icon_size"
        android:layout_height="@dimen/menu_icon_size"
        android:contentDescription="@string/gallery_menu_title"
        android:src="@drawable/gallery"/>

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/menu_share"
        android:layout_width="@dimen/menu_icon_size"
        android:layout_height="@dimen/menu_icon_size"
        android:contentDescription="@string/share_menu_title"
        android:src="@drawable/share"/>

    <android.support.v4.widget.Space
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="2"/>
</LinearLayout>